fix workflow apply

--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -40,4 +40,6 @@ jobs:
 
       - name: Terraform Apply
         id: apply
-        run: terraform apply -no-color
+        run: terraform apply -auto-approve -no-color
+        env:
+          TF_WORKSPACE: staging
