--- a/.github/workflows/your-fork.yml
+++ b/.github/workflows/your-fork.yml
@@ -1,12 +1,15 @@
 name: Your Fork
 
-on: [pull_request_target]
+on:
+  pull_request_target:
+    types: [opened]
 
 jobs:
-  greeting:
+  close:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/first-interaction@v1
+    - uses: superbrothers/close-pull-request@v3
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        pr-message: 'Hi! If you are following the Terraform Cloud Get Started tutorial, please open the PR against [your personal fork](https://learn.hashicorp.com/tutorials/terraform/cloud-workspace-create?in=terraform/cloud-get-started#fork-a-github-repository) of this repository.'
+        # Optional. Post a issue comment just before closing a pull request.
+        comment: "Hi! If you are following the Terraform Cloud Get Started tutorial, please open the PR against [your personal fork](https://learn.hashicorp.com/tutorials/terraform/cloud-workspace-create?in=terraform/cloud-get-started#fork-a-github-repository) of this repository. We will automatically closet this PR, but if you intended to edit the example itself please feel free to re-open it."
