--- a/.github/workflows/your-fork.yml
+++ b/.github/workflows/your-fork.yml
@@ -8,7 +8,9 @@ jobs:
   close:
     runs-on: ubuntu-latest
     steps:
-    - uses: superbrothers/close-pull-request@v3
+    - name: Automatically close pull requests
+      if: ${{ github.repository.name }} == 'hashicorp/tfc-guide-example'
+      uses: superbrothers/close-pull-request@v3
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
         # Optional. Post a issue comment just before closing a pull request.
