--- a/.github/workflows/your-fork.yml
+++ b/.github/workflows/your-fork.yml
@@ -14,11 +14,4 @@ jobs:
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
         # Optional. Post a issue comment just before closing a pull request.
-        comment: "Hi! If you are following the Terraform Cloud Get Started
-        tutorial, please open the PR against [your personal
-        fork](https://learn.hashicorp.com/tutorials/terraform/cloud-workspace-create?in=terraform/cloud-get-started#fork-a-github-repository)
-        of this repository. ![Screenshot showing how to change the fork your PR
-        is against. Type your GitHub user name into the search bar to find your
-        fork of the example repo.](../github_tfc-guide-example_create_pull_request.png) We will automatically close this PR, but if you
-        intended to edit the example itself, please add a comment and we will
-        review it as soon as possible."
+        comment: "Hi! If you are following the Terraform Cloud Get Started tutorial, please open the PR against [your personal fork](https://learn.hashicorp.com/tutorials/terraform/cloud-workspace-create?in=terraform/cloud-get-started#fork-a-github-repository) of this repository. We will automatically close this PR, but if you intended to edit the example itself, please add a comment and we will review it as soon as possible."
