--- a/.gitignore
+++ b/.gitignore
@@ -26,5 +26,5 @@ override.tf.json
 # !example_override.tf
 
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
-# example: *tfplan*
+*tfplan*
 
